objects/GPSTracking__c.object
<CustomObject>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>ActivityStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CollectionVehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CollectionVehicle</label>
        <referenceTo>CollectionVehicle__c</referenceTo>
        <relationshipLabel>GPSTracking</relationshipLabel>
        <relationshipName>GPSTracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
    <label>GPSTracking</label>
    <nameField>
        <displayFormat>GPS-{000000}</displayFormat>
        <label>GPSTracking Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GPSTracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>